Fix for bug 251573 (Missing namespace declarations when adding NS'ed elements/attributes to a document programmatically). r/sr=bz.